--- a/doc/userguide.tex
+++ b/doc/userguide.tex
@@ -2,7 +2,7 @@
 
 \usepackage{a4wide}
 \usepackage{tabularx}
-\title{VM8051 User Guide}
+\title{AS8051 User Guide}
 \author{Luk Bettale}
 \date{}
 
@@ -26,7 +26,7 @@ as8051 [-b] input
 
 \section*{Assembler Macro Instructions}
 Two macro instructions are supported: \texttt{jmp} and
-\texttt{call}. When using \texttt{jmp} (resp. \texttt{call}, if the
+\texttt{call}. When using \texttt{jmp} (resp. \texttt{call}), if the
 label is a backward reference, these macros expands to the most
 suitable between \texttt{sjmp}, \texttt{ajmp}, \texttt{ljmp}
 (resp. \texttt{acall}, \texttt{lcall}). If the reference is forward,
@@ -51,7 +51,7 @@ The following directives are supported:
   \noalign{\smallskip}
   \texttt{ORG}&Specifies the location of the following lines in
   code. This is used to place code at specific locations.\\
-  &\texttt{\ \ \ \ RSEG 0x0100 ;; following code starts at address 0x0100}\\
+  &\texttt{\ \ \ \ ORG 0x0100 ;; following code starts at address 0x0100}\\
   \noalign{\smallskip}
   \hline
   \noalign{\smallskip}
