add documentation of DB directive

--- a/doc/userguide.tex
+++ b/doc/userguide.tex
@@ -82,6 +82,11 @@ The following directives are supported:
   \noalign{\smallskip}
   \hline
   \noalign{\smallskip}
+  \texttt{DB}&Declare a byte table (in code segment only).\\
+  &\texttt{\ \ \ \ DB 0xAA, 0xBB, 0xCC, 0xDD ; 4 bytes in code}\\
+  \noalign{\smallskip}
+  \hline
+  \noalign{\smallskip}
   \texttt{DS}&Reserve some space in the current segment (not initialized).\\
   &\texttt{\ \ \ \ DS 8 ; reserve 8 bytes}\\
   \noalign{\smallskip}
